--- a/service-defenition.yml
+++ b/service-defenition.yml
@@ -1,16 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-Service
+  name: intdb-Service
   labels:
-    name: intapi
+    name: intdb
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-    - targetPort: 80
-      port: 80
-      nodePort: 3030
-      name: http
-  selector:
-    name: intapi
-    type: FrontEnd-python
+    - targetPort: 27017
+      port: 27017
+      nodePort: 27100
